<resources>
    <string-array name="tab_names">
        <item>Site Info</item>
        <item>Service Request</item>
        <item>OPCO Tenancy</item>
        <item>Plan &amp; Design</item>
        <item>Site Acquisition</item>
        <item>SST / SBC</item>
        <item>Utilities Equip</item>
        <item>NOC &amp; Comp</item>
        <item>TWR &amp; Civil Infra</item>
        <item>Power &amp; fuel</item>
        <item>Rf Survey</item>
        <item>QA &amp; Inspection</item>

    </string-array>
    <string name="app_name">TowerOSS</string>
    <string name="setting">Setting</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="logout"><u>Logout</u></string>
    <string name="site_name_uid">Site Name Uid..</string>
    <string name="search_site">Search site</string>
    <string name="history">History</string>
    <string name="searchby">Search by</string>
    <string name="punch_point_creation">Punch Point Creation</string>
    <string name="search_qat">Search QAT</string>
    <string name="punch_points">Punch Points</string>
    <string name="obeservation">Obeservation</string>
    <string name="recommendation">Recommendation</string>
    <string name="issue_type">Issue Type</string>
    <string name="target_date">Target Date</string>
    <string name="select_here">Select here</string>
    <string name="type_here">Type here</string>
    <string name="submit_punch_point">Submit Punch Point</string>
    <string name="status">Status</string>
    <string name="resolved">Resolved</string>
    <string name="resolution">Resolution</string>
    <string name="cloded_by">Closed By</string>
    <string name="created_by">Created By</string>
    <string name="resolved_date">Resolve Date / Time</string>
    <string name="created_date">Created Date / Time</string>
    <string-array name="spinner_item">
        <item>Select here</item>




    </string-array>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="edit_profile">Edit Profile</string>
    <string name="general">GENERAL</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_task">Task</string>
    <string name="title_site_board">Site iBoard</string>
    <string name="title_menu">Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="site_latlong">Site lat-long</string>
    <string name="site">Site Status</string>
    <string name="site_aquisition">Site Aquisition</string>
    <string name="site_address">Site Address</string>
    <string name="state">State</string>
    <string name="cluster">Cluster</string>
    <string name="site_dimesion">Site Dimension</string>
    <string name="premises">Premises Type</string>
    <string name="no_tenant">No. of Tenant</string>
    <string name="sit_category">Site Category</string>
    <string name="power_type">Power Type</string>
    <string name="tenant_feasibility">Tenant Feasibility</string>
    <string name="power_backup">Power Back-up</string>
    <string name="smps_config">SMPS Configuration</string>
    <string name="no_plots">No.of Poles</string>
    <string name="pole_length">Pole Length(m)</string>
    <string name="offset_pole">Offset Pole Count</string>
    <string name="avg_eb">Avg. EB Supply</string>
    <string name="edit">Edit</string>
    <string name="lifecycle">Lifecycle</string>
    <string name="escalationmatrix">Escalation Matrix</string>
    <string name="viewonmap">View on map</string>
    <string name="login_first">Login\n\n</string>
    <string name="registratio">Registration</string>
    <string name="please_ente">Please enter full detail for registration</string>
    <string name="some_id1">1</string>
    <string name="password">Password</string>
    <string name="geography">Geography</string>
    <string name="basic_info">Basic info</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="some_id3">3</string>
    <string name="some_id2">2</string>
    <string name="mobile_numb">Mobile Number</string>
    <string name="email_id">Email ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="next">Next</string>
    <string name="already_hav">Already have account?</string>
    <string name="login">Login</string>
    <string name="job_role">Job Role</string>
    <string name="confirm_password">Confirmed Password</string>
    <string name="register">Register</string>
    <string name="role_state">Role State</string>
    <string name="role_mainte">Role Maintenance Point</string>
    <string name="role_area">Role Area</string>
    <string name="successfully"><u>Login</u></string>
    <string name="temp_name">Dear <font fgcolor='##000000'>Brajesh Patel,</font> your OTP for registration is <font fgcolor='##000000'>454545</font>. Use this password to validate your login</string>
    <string name="text_temp_4">Please enter your 10 digit mobile number</string>
    <string name="resend_otp"><u>Resend OTP?</u></string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="txt_subhead">Enter your mobile number for get otp and access your account faster!</string>
    <string name="txt_body_mobile_number">Mobile number</string>
    <string name="enter_mobile_text">4656925465</string>
    <string name="btn_next">Next  ></string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_subheading">Please enter a one time password(OTP) sent to +91 7827230654</string>
    <string name="txt_otp">Didn\'t receive an OTP</string>
    <string name="txt_resend_otp">Resend OTP?</string>
    <string name="patroller_management">Patroller Management</string>
    <string name="alert_management">Alert Management</string>
    <string name="category">Category</string>
    <string name="tower_route">Tower Route</string>
    <string name="site_name">Site Name</string>
    <string name="site_id">Site Id</string>
    <string name="site_type">Site Type</string>
    <string name="qat_id">QAT ID</string>
    <string name="qat_name">QAT Name</string>
    <string name="create_datetime">Create Date/Time</string>
    <string name="submitted_datetime">Submitted Date/Time</string>
    <string name="Approved_datetime">Approved Date/Time</string>
    <string name="mark_taylor">Mark Taylor</string>
    <string name="qa">QA</string>
    <string name="electircal_civil_material">Electircal / Civil Material</string>
    <string name="addmore">Add More</string>
    <string name="operator_name">Operator Name</string>
    <string name="hello_blank_fragment_demo">Blank Fragment</string>
    <string name="demo_answer">Hjghsgjfgygsfygvydjfghvgashjdvgsdbhjsdvsdghjadgvjyvjdgsjhvgajdvdjahvgsgvhjdsgjhvygygvwsyjsdg jhbvhjgwyvguehfcd hbdhjvgeyvgyjgv bhgjycfgwjycgvjs</string>
    <string name="u_service_details_u"> <u>Service Details</u>.</string>
    <string name="po_details"><u>PO Details</u>.</string>
    <string name="battry_module"><u>Battery Module</u>.</string>
    <string name="consumable_materials"><u>Consumable Materials</u>.</string>
    <string name="additional_accessories"><u>Additional Accessories</u>.</string>
    <string name="album">Album</string>
    <string name="camera">camera</string>
    <string name="done_all">done all</string>
    <string name="msg_no_selected">There is no selected image.</string>
    <string name="str_all_view">All view</string>
    <string name="msg_permission">Permission denied.</string>
    <string name="msg_no_image">There is no album.\nTake a Picture!</string>
    <string name="msg_full_image">Selection full. Deselect an image to choose another.</string>
    <string name="msg_loading_image">Loading…</string>
    <string name="msg_error">There was a temporary error. Please try again in a few minutes.</string>
    <string name="title_toolbar" formatted="false" translatable="false">%s (%d/%d)</string>
    <string name="msg_minimum_image">Please select at least <b>%d</b> images.</string>
    <string name="done">Done</string>
    <string name="internet_alert">Check Your Internet Connection</string>
    <string name="acqusition_site_survey">Acqusition Site Survey</string>
    <string name="so_date">SO Date :</string>
    <string name="_10_nov_2022">10-Nov-2022</string>
    <string name="ce_mhmum_sc_a0123_0001">CE-MHMUM-SC-A0123_0001</string>
    <string name="m">M</string>
</resources>