<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.smarthub.baseapplication.ui.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_notificationsFragment"
            app:destination="@id/notificationsFragment"
            app:popUpTo="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_task"
        android:name="com.smarthub.baseapplication.ui.fragments.task.TaskFragment"
        android:label="@string/title_task"
        tools:layout="@layout/fragment_task" />

    <fragment
        android:id="@+id/site_board"
        android:name="com.smarthub.baseapplication.ui.fragments.search.SearchFragment"
        android:label="@string/title_site_board"
        tools:layout="@layout/search_fragment" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.smarthub.baseapplication.ui.fragments.menu.MenuFragment"
        android:label="MenuFragment"
        tools:layout="@layout/fragment_menu">
        <action
            android:id="@+id/action_navigation_menu_to_projectsFragment2"
            app:destination="@id/projectsFragment2" />
    </fragment>
    <fragment
        android:id="@+id/addTaskFragment"
        android:name="com.smarthub.baseapplication.ui.fragments.task.AddTaskInfoFragment"
        android:label="AddTaskFragment" />
    <fragment
        android:id="@+id/projectsFragment2"
        android:name="com.smarthub.baseapplication.ui.project.ProjectsFragment"
        android:label="ProjectsFragment" >
        <action
            android:id="@+id/action_projectsFragment2_to_navigation_menu"
            app:destination="@id/navigation_menu" />
    </fragment>
    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.smarthub.baseapplication.ui.fragments.notifications.NotificationsFragment"
        android:label="fragment_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>