<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="#00000000"
    tools:context=".fragments.RegFragment_1">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Login Box -->

        <TextView
            android:id="@+id/registratio"
            android:layout_width="194dp"
            android:layout_height="37dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="64dp"
            android:gravity="center|top"
            android:text="@string/registratio"
            android:textAppearance="@style/registratio"
            app:layout_constraintBottom_toTopOf="@+id/please_ente"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/please_ente"
            android:layout_width="340.7dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:text="@string/please_ente"
            android:textAppearance="@style/please_ente"
            app:layout_constraintBottom_toTopOf="@+id/some_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registratio" />

        <View
            android:id="@+id/login_input"
            android:layout_width="367.89dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="40dp"
            android:background="@drawable/login_input"
            app:layout_constraintBottom_toTopOf="@+id/role_state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/role_mainte"
            android:layout_width="297.37dp"
            android:layout_height="27dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="top"
            android:text="@string/mobile_numb"
            android:textAppearance="@style/input_style"
            app:layout_constraintBottom_toBottomOf="@+id/login_input3"
            app:layout_constraintEnd_toEndOf="@+id/login_input3"
            app:layout_constraintStart_toStartOf="@+id/login_input3"
            app:layout_constraintTop_toTopOf="@+id/login_input3" />

        <View
            android:id="@+id/login_input2"
            android:layout_width="367.89dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="29dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/login_input"
            app:layout_constraintBottom_toTopOf="@+id/role_mainte"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_input" />

        <TextView
            android:id="@+id/role_area"
            android:layout_width="297.37dp"
            android:layout_height="27dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="top"
            android:text="@string/email_id"
            android:textAppearance="@style/input_style"
            app:layout_constraintBottom_toBottomOf="@+id/login_input4"
            app:layout_constraintEnd_toEndOf="@+id/login_input4"
            app:layout_constraintStart_toStartOf="@+id/login_input4"
            app:layout_constraintTop_toTopOf="@+id/login_input4"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/login_input3"
            android:layout_width="367.89dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="29dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/login_input"
            app:layout_constraintBottom_toTopOf="@+id/role_area"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_input2" />

        <TextView
            android:id="@+id/first_name"
            android:layout_width="297.37dp"
            android:layout_height="27dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="top"
            android:text="@string/first_name"
            android:textAppearance="@style/input_style"
            app:layout_constraintBottom_toBottomOf="@+id/login_input"
            app:layout_constraintEnd_toEndOf="@+id/login_input"
            app:layout_constraintStart_toStartOf="@+id/login_input"
            app:layout_constraintTop_toTopOf="@+id/login_input" />

        <View
            android:id="@+id/login_input4"
            android:layout_width="367.89dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="29dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/login_input"
            app:layout_constraintBottom_toTopOf="@+id/enter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_input3" />

        <TextView
            android:id="@+id/role_state"
            android:layout_width="297.37dp"
            android:layout_height="27dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="top"
            android:text="@string/last_name"
            android:textAppearance="@style/input_style"
            app:layout_constraintBottom_toBottomOf="@+id/login_input2"
            app:layout_constraintEnd_toEndOf="@+id/login_input2"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="@+id/login_input2"
            app:layout_constraintTop_toTopOf="@+id/login_input2"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/enter"
            android:layout_width="367.89dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/enter"
            app:layout_constraintBottom_toTopOf="@+id/already_hav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            android:layout_width="349dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/next"
            android:textAppearance="@style/button1"
            app:layout_constraintBottom_toBottomOf="@+id/enter"
            app:layout_constraintEnd_toEndOf="@+id/enter"
            app:layout_constraintHorizontal_bias="0.647"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/enter"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/already_hav"
            android:layout_width="147dp"
            android:layout_height="26dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal|top"
            android:text="@string/already_hav"
            android:textAppearance="@style/already_hav"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="87dp"
            android:layout_height="26dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="30dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/login"
            android:textAppearance="@style/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/password"
            android:layout_width="49dp"
            android:layout_height="14dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="28dp"
            android:gravity="top"
            android:lineSpacingExtra="2sp"
            android:text="@string/password"
            android:textAppearance="@style/password"
            android:translationY="-0.77sp"
            app:layout_constraintBottom_toTopOf="@+id/login_input"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/geography"
            android:layout_width="56dp"
            android:layout_height="14dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="28dp"
            android:gravity="top"
            android:lineSpacingExtra="2sp"
            android:text="@string/geography"
            android:textAppearance="@style/geography"
            android:translationY="-0.77sp"
            app:layout_constraintBottom_toTopOf="@+id/login_input"
            app:layout_constraintEnd_toStartOf="@+id/password" />


        <TextView
            android:id="@+id/basic_info"
            android:layout_width="49dp"
            android:layout_height="14dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="28dp"
            android:gravity="top"
            android:lineSpacingExtra="2sp"
            android:text="@string/basic_info"
            android:textAppearance="@style/basic_info"
            android:translationY="-0.77sp"
            app:layout_constraintBottom_toTopOf="@+id/login_input"
            app:layout_constraintEnd_toStartOf="@+id/geography"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/some_id3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/rectangle_3"
            android:gravity="center"
            android:lineSpacingExtra="3sp"
            android:text="@string/some_id3"
            android:textAppearance="@style/some_id3"
            android:translationY="-1.27sp"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/some_id"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="76dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/rectangle_3"
            android:gravity="center"
            android:lineSpacingExtra="3sp"
            android:text="@string/some_id2"
            android:textAppearance="@style/some_id3"
            android:translationY="-1.27sp"
            app:layout_constraintBottom_toTopOf="@+id/geography"
            app:layout_constraintEnd_toStartOf="@+id/some_id3" />

        <View
            android:id="@+id/line_5"
            android:layout_width="74dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/line_5"
            app:layout_constraintBottom_toTopOf="@+id/geography"
            app:layout_constraintEnd_toStartOf="@+id/some_id"
            app:layout_constraintStart_toEndOf="@+id/some_id1"
            app:layout_constraintTop_toTopOf="@+id/some_id"
            app:layout_constraintVertical_bias="0.484" />

        <View
            android:id="@+id/line_6"
            android:layout_width="74dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/line_5"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toStartOf="@+id/some_id3"
            app:layout_constraintStart_toEndOf="@+id/some_id"
            app:layout_constraintTop_toTopOf="@+id/some_id3" />

        <TextView
            android:id="@+id/some_id1"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/rectangle_2"
            android:gravity="center"
            android:lineSpacingExtra="3sp"
            android:text="@string/some_id1"
            android:textAppearance="@style/some_id1"
            android:translationY="-1.27sp"
            app:layout_constraintBottom_toTopOf="@+id/basic_info"
            app:layout_constraintEnd_toStartOf="@+id/some_id"
            app:layout_constraintHorizontal_bias="0.336"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/please_ente"
            app:layout_constraintVertical_bias="0.983" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>